--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,9 @@
     <string name="timezones_lit">Timezones: %s</string>
     <string name="call_codes_lit">Calling codes: %s</string>
     <string name="tld_lit">Top level domain: %s</string>
-    <string name="alpha_abbr_lit">Alpha 2 code: %s, alpha 3 code: %s</string>
+    <string name="alpha2_lit">Alpha 2 code: %s</string>
+    <string name="alpha3_lit">Alpha 3 code: %s</string>
     <string name="currency_lit">Currencies: %s</string>
     <string name="languages_lit">Languages: %s</string>
+    <string name="exit">Exit</string>
 </resources>
